# Piaic_Projects

./: LongTermMemoryAIAgent.ipynb  README.md
05_UV_Projects/explore-uv2/: .gitignore  pyproject.toml
05_UV_Projects/explore-uv2/myproject/: pyproject.toml
05_UV_Projects/explore-uv2/src/explore_uv2/: __init__.py
06_crewai-basic-flow/: crewai_flow.html  fun_fact.md  pyproject.toml
06_crewai-basic-flow/src/basic_flow/: __init__.py  main.py  main1.py  main2.py  main3.py
07_LanGraph_FLow(Basic)/: .env  fun_fact.md  pyproject.toml
07_LanGraph_FLow(Basic)/src/lg_flow/: __init__.py  simple_flow.py
08_Crewai(Design Patterns)/: .env  crewai_flow.html  pyproject.toml
08_Crewai(Design Patterns)/Augmented_llm_06/: .env  .env.example  pyproject.toml
08_Crewai(Design Patterns)/Augmented_llm_06/src/augmented_llm_06/: __init__.py  custom_data_get.py  example.py  example1.py
08_Crewai(Design Patterns)/Evaluator_05/: crewai_flow.html  pyproject.toml
08_Crewai(Design Patterns)/Evaluator_05/src/evaluator_05/: __init__.py  example.py
08_Crewai(Design Patterns)/llm_connectivety/: README.md  pyproject.toml
08_Crewai(Design Patterns)/llm_connectivety/.mypy_cache/3.12/: __future__.meta.json  _ast.data.json  _ast.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _contextvars.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _io.meta.json  _operator.data.json  _operator.meta.json  _random.meta.json  _warnings.data.json  _warnings.meta.json  _weakref.data.json  _weakref.meta.json  _weakrefset.meta.json  _winapi.data.json  _winapi.meta.json  abc.data.json  abc.meta.json  ast.data.json  ast.meta.json  base64.meta.json  builtins.data.json  builtins.meta.json  codecs.meta.json  colorsys.data.json  colorsys.meta.json  contextlib.data.json  contextlib.meta.json  contextvars.meta.json  copy.meta.json  dataclasses.meta.json  (+54 more)
08_Crewai(Design Patterns)/llm_connectivety/.mypy_cache/3.12/_typeshed/: __init__.meta.json  importlib.data.json  importlib.meta.json
08_Crewai(Design Patterns)/llm_connectivety/.mypy_cache/3.12/annotated_types/: __init__.data.json  __init__.meta.json
08_Crewai(Design Patterns)/llm_connectivety/.mypy_cache/3.12/collections/: __init__.meta.json  abc.meta.json
08_Crewai(Design Patterns)/llm_connectivety/.mypy_cache/3.12/email/: __init__.meta.json  _policybase.data.json  _policybase.meta.json  charset.meta.json  contentmanager.meta.json  errors.meta.json  header.meta.json  message.data.json  message.meta.json  policy.meta.json
08_Crewai(Design Patterns)/llm_connectivety/.mypy_cache/3.12/importlib/: __init__.data.json  __init__.meta.json  _abc.data.json  _abc.meta.json  _bootstrap.data.json  _bootstrap.meta.json  _bootstrap_external.data.json  _bootstrap_external.meta.json  abc.meta.json  machinery.meta.json  readers.meta.json
08_Crewai(Design Patterns)/llm_connectivety/.mypy_cache/3.12/json/: __init__.data.json  __init__.meta.json  decoder.data.json  decoder.meta.json  encoder.meta.json
08_Crewai(Design Patterns)/llm_connectivety/.mypy_cache/3.12/llm_connectivety/: __init__.data.json  __init__.meta.json  crews.data.json  crews.meta.json
08_Crewai(Design Patterns)/llm_connectivety/.mypy_cache/3.12/os/: __init__.data.json  __init__.meta.json  path.data.json  path.meta.json
08_Crewai(Design Patterns)/llm_connectivety/.mypy_cache/3.12/pydantic/: __init__.data.json  __init__.meta.json  _migration.data.json  _migration.meta.json  aliases.data.json  aliases.meta.json  annotated_handlers.data.json  annotated_handlers.meta.json  color.data.json  color.meta.json  config.data.json  config.meta.json  errors.data.json  (+27 more)
08_Crewai(Design Patterns)/llm_connectivety/src/llm_connectivety/: main.py  main1.py
08_Crewai(Design Patterns)/multi_ai_agent/: README.md  pyproject.toml
08_Crewai(Design Patterns)/multi_ai_agent/src/multi_ai_agent/: main.py  main1.py
08_Crewai(Design Patterns)/orchestration_flow_04/: crewai_flow.html  pyproject.toml
08_Crewai(Design Patterns)/orchestration_flow_04/src/orchestration_flow_04/: __init__.py  orchestration_flow.py  simple_example.py
08_Crewai(Design Patterns)/parallelization_03/: crewai_flow.html  pyproject.toml
08_Crewai(Design Patterns)/parallelization_03/src/parallelization_03/: __init__.py  parallelization1.py  parallelization2.py
08_Crewai(Design Patterns)/project_01/: .env  pyproject.toml
08_Crewai(Design Patterns)/project_01/src/project_01/: hello.py
08_Crewai(Design Patterns)/prompt_chaining_01/: .env  .env.examples  crewai_flow.html  pyproject.toml
08_Crewai(Design Patterns)/prompt_chaining_01/src/prompt_chaining_01/: __init__.py  prompt_chaining.py
08_Crewai(Design Patterns)/routing_02/: crewai_flow.html  pyproject.toml
08_Crewai(Design Patterns)/routing_02/.mypy_cache/3.12/: __future__.data.json  __future__.meta.json  __main__.data.json  __main__.meta.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.meta.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _csv.data.json  _csv.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.meta.json  _frozen_importlib.meta.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _heapq.data.json  _heapq.meta.json  _imp.data.json  _imp.meta.json  _io.data.json  _io.meta.json  _locale.data.json  _locale.meta.json  _lsprof.data.json  _lsprof.meta.json  _operator.meta.json  _queue.data.json  (+240 more)
08_Crewai(Design Patterns)/routing_02/src/routing_02/: __init__.py  routing.py
08_Crewai(Design Patterns)/src/: Complex_chain.py  simple_chain.py
09_crewai_knowledge(Sources)/03_csv_file_source/csv_knowledge_source/: .env.example  README.md  pyproject.toml
09_crewai_knowledge(Sources)/03_csv_file_source/csv_knowledge_source/Knowledge/: Extended_Company_FAQ.csv
(+7033 files in other folders)
