[project]
name = "augmented-llm-06"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Abdullah Iqbal", email = "hassangb544@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.102.0",
    "crewai-tools>=0.36.0",
    "docling>=2.25.0",
    "google-generativeai>=0.8.4",
]

[project.scripts]
augmented-llm-06 = "augmented_llm_06:main"
augmented-llm = "augmented_llm_06.example:kickoff"
augmented-llm2 = "augmented_llm_06.example1:kickoff"
custom-data-get = "augmented_llm_06.custom_data_get:kickoff"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
