[project]
name = "multi_ai_agent"
version = "0.1.0"
description = "multi_ai_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0",
]

[project.scripts]
kickoff = "multi_ai_agent.main:kickoff"
plot = "multi_ai_agent.main:plot"
multi-crew = 'multi_ai_agent.main1:kickoff'


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
