[project]
name = "orchestration-flow-04"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Abdullah Iqbal", email = "hassangb544@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.102.0",
    "crewai-tools>=0.36.0",
    "litellm>=1.60.2",
]

[project.scripts]
orchestration-flow-04 = "orchestration_flow_04:main"
orch-flow = "orchestration_flow_04.simple_example:kickoff"
orch-plot = "orchestration_flow_04.simple_example:plot"
orch-flow1 = "orchestration_flow_04.orchestration_flow:kickoff"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
