[project]
name = "routing-02"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Abdullah Iqbal", email = "hassangb544@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.102.0",
    "crewai-tools>=0.36.0",
    "litellm>=1.60.2",
]

[project.scripts]
routing-02 = "routing_02:main"
routing-flow = "routing_02.routing:kickoff"
r-plot = "routing_02.routing:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
