[project]
name = "csv_knowledge_source"
version = "0.1.0"
description = "csv_knowledge_source using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
    "google-generativeai>=0.8.4",
]

[project.scripts]
kickoff = "csv_knowledge_source.main:kickoff"
plot = "csv_knowledge_source.main:plot"
csv-flow = "csv_knowledge_source.crews.csv_data_get:kickoff"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
